# goit-pyweb-hw-8

web_week_8_1/: hw.py  models.py  pyproject.toml  search_quotes.py
web_week_8_2/: consumer.py  contact_model.py  producer.py  pyproject.toml
