[tool.poetry]
name = "web-week-8-2"
version = "0.1.0"
description = ""
authors = ["KyryloDolia <fr1ghtn1ght2101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
bson = "^0.5.10"
mongoengine = "^0.29.1"
faker = "^33.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
